Fixed spacing on slideshow

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,8 @@ button.card-more {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(10,10,10,0.4)
+    background-color: rgba(10,10,10,0.4);
+    z-index: 10;
 }
 .minfo{
     background-color: var(--bg);
